# cargo-vs

./: .travis.yml  Cargo.toml  LICENSE-MIT  LICENSE.md  Readme.md
.github/workflows/: rust.yml
src/: metadata.rs  run.rs  vs2017.rs  vs2019.rs  vs2022.rs
