# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name            = "cargo-vs"
version         = "0.1.0"
authors         = ["MaulingMonkey <git@maulingmonkey.com>"]
edition         = "2018"
repository      = "https://github.com/MaulingMonkey/cargo-vs"
documentation   = "https://docs.rs/cargo-vs"
license         = "Apache-2.0 OR MIT"
readme          = "Readme.md"
description     = "autogenerate visual studio solutions / projects"
keywords        = ["cargo", "visual", "studio", "vs", "2017"]
categories      = ["development-tools::cargo-plugins", "development-tools::debugging"]

[dependencies]
uuid            = { version = "0.8", features = ["v5"] }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
toml            = "0.5"

[[bin]]
name            = "cargo-vs2017"
path            = "src/vs2017.rs"
